<resources>
    <!--ACTIVITY-->
    <string name="app_name">Note</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_note">AddNoteActivity</string>
    <string name="note_notification">Note Notification!</string>
    <string name="ticker_notification">5 seconds has passed</string>
    <string name="action_choose_photo">Choose Photo</string>
    <string name="action_choose_color">Choose Color</string>

    <!--TEXT VIEW-->
    <string name="tv_no_note">No notes</string>
    <string name="tv_get_datetime">Get date time in your mobile</string>
    <string name="tv_title">Show title</string>
    <string name="tv_content">Show content</string>
    <string name="tv_time">Show create time note</string>

    <!--EDIT TEXT-->
    <string name="et_hint_title">Title</string>
    <string name="et_hint_note">Note</string>

    <!--DESCRIPTION-->
    <string name="close_alarm">Close Alarm</string>
    <string name="img_alarm">Set Alarm</string>
    <string name="img_show_picture">Picture</string>
    <string name="ib_remove">Remove Picture</string>
    <string name="iv_previous">Previous Note</string>
    <string name="iv_next">Next Note</string>
    <string name="iv_share">Share Note</string>
    <string name="iv_delete">Delete Note</string>

    <!--BUTTON-->
    <string name="bt_enabled_alarm">Alarm</string>
    <string name="bt_take_photos">Take Photos</string>
    <string name="bt_choose_photos">Choose Photos</string>
    <string name="bt_ok">OK</string>
    <string name="bt_cancel">Cancel</string>
    <string name="title_activity_detail">DetailActivity</string>
</resources>
