<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.emmalady.note.activity.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rlNavigator">
            <include
                android:id="@+id/include_add_note"
                layout="@layout/activity_add_note" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rlNavigator"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:weightSum="1"
            android:background="@color/LightOrange">
            <ImageButton
                android:id="@+id/ibbPrevious"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:contentDescription="@string/iv_previous"
                android:src="@drawable/ic_left_gray_24dp"
                android:background="@android:color/transparent"
                android:onClick="previousNote"/>
            <ImageButton
                android:id="@+id/ibShare"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:contentDescription="@string/iv_share"
                android:src="@drawable/ic_share_gray_24dp"
                android:background="@android:color/transparent"
                android:onClick="shareNote"/>
            <ImageButton
                android:id="@+id/ibDelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:contentDescription="@string/iv_delete"
                android:src="@drawable/ic_delete_gray_24dp"
                android:background="@android:color/transparent"
                android:onClick="deleteNote"/>
            <ImageButton
                android:id="@+id/ibNext"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:contentDescription="@string/iv_next"
                android:src="@drawable/ic_right_gray_24dp"
                android:background="@android:color/transparent"
                android:onClick="nextNote"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
