<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.emmalady.note.activity.AddNoteActivity"
    tools:showIn="@layout/activity_add_note">
    <ImageView
        android:id="@+id/imgAlarm"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_alarm_gray_24dp"
        android:layout_marginLeft="@dimen/img_margin_left"
        android:layout_marginStart="@dimen/img_margin_left"
        android:layout_marginTop="@dimen/ib_margin_top"
        android:contentDescription="@string/img_alarm"/>
    <LinearLayout
        android:id="@+id/ll_backend_alarm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:layout_toRightOf="@id/imgAlarm"
        android:layout_toEndOf="@id/imgAlarm"
        android:layout_alignBaseline="@id/imgAlarm"
        android:layout_marginLeft="@dimen/ln_margin_left"
        android:layout_marginStart="@dimen/ln_margin_left">
        <Spinner
            android:id="@+id/spDateAlarm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/sp_margin_left"
            android:layout_marginStart="@dimen/sp_margin_left"
            android:layout_marginTop="@dimen/sp_margin_top"></Spinner>
        <Spinner
            android:id="@+id/spTimeAlarm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/sp_margin_left"
            android:layout_marginStart="@dimen/sp_margin_left"
            android:layout_marginTop="@dimen/sp_margin_top"></Spinner>
        <ImageButton
            android:id="@+id/ibDisabledAlarm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/ib_margin_left"
            android:layout_marginStart="@dimen/ib_margin_left"
            android:layout_marginTop="@dimen/ib_margin_top"
            android:src="@drawable/ic_close_orange_24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/close_alarm"
            android:onClick="disabledAlarm"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_frontend_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imgAlarm"
        android:layout_toEndOf="@id/imgAlarm">
        <Button
            android:id="@+id/btEnabledAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_enabled_alarm"
            android:layout_marginLeft="@dimen/img_margin_left"
            android:layout_marginStart="@dimen/img_margin_left"
            android:textColor="@color/Gray"
            android:textSize="@dimen/bt_text_size"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:onClick="enabledAlarm"/>
    </LinearLayout>

</RelativeLayout>
